WIP: merge this

--- a/readthedocs_custom/base.html
+++ b/readthedocs_custom/base.html
@@ -86,7 +86,7 @@
       </nav>
 
       {# PAGE CONTENT #}
-      {% include "armbian-navbar.html" %}
+      {% include "olimex-navbar.html" %}
       <div class="wy-nav-content">
         <div class="rst-content">
           {% include "breadcrumbs.html" %}
